<?xml version="1.0"?>
<package format="2">
  <name>hello_helpers</name>
  <version>0.2.0</version>
  <description>The hello_helpers package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="support@hello-robot.com">Hello Robot Inc.</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Apache License 2.0</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/hello_helpers</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <depend>rclpy</depend>
  <!-- TODO: ros_numpy is not yet ported to ROS 2
             See: https://github.com/eric-wieser/ros_numpy/issues/20
       exec_depend>ros_numpy</exec_depend -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
