<?xml version="1.0"?>
<package format="3">
  <name>stretch_moveit2</name>
  <version>0.3.0</version>
  <description>
     Package with all the configuration and launch files for using Stretch with the MoveIt2 Motion Planning Framework
  </description>
  <author email="davidvlu@gmail.com">David V. Lu!!</author>
  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
  <maintainer email="bshah@hello-robot.com">Binit Shah</maintainer>

  <license>Apache License 2.0</license>

  <url type="website">https://github.com/hello-robot/stretch_ros2/tree/galactic/stretch_moveit2</url>
  <url type="bugtracker">https://github.com/hello-robot/stretch_ros2/issues</url>
  <url type="repository">https://github.com/hello-robot/stretch_ros2</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>moveit_kinematics</depend>
  <depend>moveit_planners_ompl</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_ros_visualization</depend>
  <depend>moveit_ros_perception</depend>
  <depend>moveit_simple_controller_manager</depend>
  <!-- TODO: uncomment once MSA is ported to ROS2 -->
  <!-- <depend>moveit_setup_assistant</depend> -->
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>robot_state_publisher</depend>
  <depend>stretch_description</depend>
  <depend>stretch_kinematics_plugin</depend>
  <depend>stretch_sensor_manager</depend>
  <depend>tf2_ros</depend>
  <depend>xacro</depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
