<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stretch_navigation</name>
  <version>0.0.1</version>
  <description>The stretch_navigation package</description>
  <maintainer email="support@hello-robot.com">Hello Robot Inc.</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>joy</depend>
  <depend>teleop_twist_keyboard</depend>
  <depend>teleop_twist_joy</depend>
  <depend>nav2_amcl</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_bringup</depend>
  <depend>slam_toolbox</depend>
  <depend>octomap</depend>
  <depend>octomap_mapping</depend>
  <depend>octomap_msgs</depend>
  <depend>octomap_ros</depend>
  <depend>octomap_rviz_plugins</depend>
  <depend>octomap_server</depend>
  <depend>octovis</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
