<?xml version="1.0"?>
<package format="3">
  <name>stretch_kinematics_plugin</name>
  <version>0.0.0</version>
  <description>Package for the inverse kinematics solver for stretch</description>

  <maintainer email="TODO@gmail.com">TODO</maintainer>
  <author email="TODO@gmail.com">TODO</author>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>moveit_core</depend>
  <depend>class_loader</depend>
  <depend>pluginlib</depend>
  <depend>eigen</depend>
  <depend>tf2_eigen</depend>
  <depend>moveit_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
