<?xml version="1.0"?>
<package format="3">
  <name>stretch_sensor_manager</name>
  <version>0.0.0</version>
  <description>MoveIt sensor manager plugin for stretch head</description>

  <maintainer email="TODO@gmail.com">TODO</maintainer>
  <author email="TODO@gmail.com">TODO</author>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>moveit_core</depend>
  <depend>class_loader</depend>
  <depend>pluginlib</depend>
  <depend>eigen</depend>
  <depend>tf2_eigen</depend>
  <depend>moveit_msgs</depend>
  <depend>rclcpp</depend>
  <depend>moveit_ros_planning</depend>
  <depend>rosparam_shortcuts</depend>
  <depend>moveit_ros_planning_interface</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
